# easy_perception

easy_ai/: CMakeLists.txt
easy_ai/image_lpr/: CMakeLists.txt
easy_ai/image_lpr/lpr/: CNNRecognizer.cpp  CNNRecognizer.h  FastDeskew.cpp  FineMapping.cpp  FineMapping.h  ModelLoader.cpp  ModelLoader.h  Pipeline.cpp  Pipeline.h  PlateDetection.cpp  PlateDetection.h  PlateInfo.h  PlateSegmentation.cpp  PlateSegmentation.h  Recognizer.cpp  SegmentationFreeRecognizer.cpp  SegmentationFreeRecognizer.h  util.h
easy_ai/image_lpr/tests/: test_detection.cpp  test_detection_simd.cpp  test_modelloader.cpp  test_pipeline.cpp  test_recognization.cpp
easy_ai/imgproc_c/testing/: CMakeLists.txt
easy_ai/test_data/lpr_model/: deploy.prototxt  lpr.prototxt
easy_arm/: README.md
easy_arm/ambarella/: CMakeLists.txt  env.sh
easy_arm/ambarella/cmake/: ambacv22_2_dependencies.cmake  ambacv22_3_dependencies.cmake  ambacv22_dependencies.cmake  ambacv25_3_dependencies.cmake
easy_arm/ambarella/cnn_det3d/: CMakeLists.txt  test_det3d.cpp
easy_arm/ambarella/cnn_det3d/drivers/: chrome_UV20_convert_to_UV44.S  chrome_UV22_convert_to_UV44.S  chrome_convert.S  image_acquisition.cpp  image_acquisition.h  tof_316_acquisition.cpp  tof_316_acquisition.h
easy_arm/ambarella/cnn_det3d/network/: network_process.cpp  tcp_process.cpp  tcp_process.h
easy_arm/ambarella/cnn_lpr/: CMakeLists.txt  test_lpr.cpp
easy_arm/ambarella/cnn_lpr/clustering/: clustering_rect.c  clustering_rect.h  image_data_structure.h
easy_arm/ambarella/cnn_lpr/common/: common_process.cpp  common_process.h  save_data_process.cpp  save_data_process.h  save_tensor_process.cpp  save_tensor_process.h
easy_arm/ambarella/cnn_lpr/det2d/: denetv2.cpp  denetv2.h  yolov5.c  yolov5.h
easy_arm/ambarella/cnn_lpr/drivers/: image_acquisition.cpp  image_acquisition.h  rc4.h  tof_316_acquisition.cpp  tof_316_acquisition.h
easy_arm/ambarella/cnn_lpr/image/: IViBeBGS.cpp  color_converting.cpp  color_converting.h  image_acquisition.cpp  image_acquisition.h  image_process.cpp  image_process.h  vibebgs.cpp  vibebgs.h
easy_arm/ambarella/cnn_lpr/led/: led_process.cpp  led_process.h
easy_arm/ambarella/cnn_lpr/lpr/: Rec.cpp  Rec.h  det_lpr_process.cpp  det_lpr_process.h  det_process.cpp  lpr.cpp  lpr.hpp  lpr_process.cpp  lpr_process.h  rec.id.h  rec.mem.h  ssd.c  ssd.h  state_buffer.c  state_buffer.cpp  state_buffer.h  utils.cpp  utils.hpp  vout_tool.cpp  vout_tool.h
easy_arm/ambarella/cnn_lpr/lpr_third_party/: FastDeskew.cpp  FineMapping.cpp  util.h
easy_arm/ambarella/cnn_lpr/net_process/: net_process.cpp  net_process.h
easy_arm/ambarella/cnn_lpr/network/: network_process.cpp  network_process.h
easy_arm/ambarella/cnn_lpr/show/: overlay_tool.cpp  overlay_tool.h
easy_arm/ambarella/cnn_lpr/ssd/: det_process.h
easy_arm/ambarella/cnn_lpr/tof/: IViBeBGS.cpp  tof_316_acquisition.cpp  tof_316_acquisition.h  tof_acquisition.cpp  tof_acquisition.h  tof_data_process.cpp  tof_data_process.h  vibebgs.cpp
easy_arm/ambarella/cnn_runtime/: CMakeLists.txt
easy_arm/ambarella/cnn_runtime/cnn_common/: image_process.cpp  image_process.h
easy_arm/ambarella/cnn_runtime/det2d/: denet.cpp  yolov3.cpp
easy_arm/ambarella/cnn_runtime/one_class/: one_class_net.cpp  one_class_net.h  patchcore_postprocess.cpp  patchcore_postprocess.h
easy_arm/ambarella/cnn_runtime/pose/: posenet.cpp
easy_arm/ambarella/cnn_runtime/rec_text/: textnet.cpp  textnet.h
easy_arm/ambarella/cnn_runtime/segment/: segnet.cpp
easy_arm/ambarella/cnn_runtime/tests/: CMakeLists.txt  classnet_test.cpp  denet_test.cpp  one_class_test.cpp  posenet_test.cpp  segnet_test.cpp  textnet_test.cpp
easy_arm/ambarella/inference/: CMakeLists.txt
easy_arm/ambarella/inference/classify/: classnet_test.cpp
easy_arm/ambarella/inference/common/: cavalry_process.h  cnn_data_structure.h  image_process.cpp  image_process.h  net_process.cpp  net_process.h
easy_arm/ambarella/inference/detection2d/: detnet_test.cpp  yolov3.cpp  yolov3.h
easy_arm/ambarella/inference/posenet/: CMakeLists.txt  openpose_postprocess.cpp  openpose_postprocess.h  posenet_postprocess.cpp  posenet_postprocess.h  posenet_test.cpp
easy_arm/ambarella/inference/rec_text/: CMakeLists.txt  textnet.cpp  textnet.h  textnet_test.cpp
easy_arm/ambarella/inference/segment/: segnet_test.cpp
easy_arm/ambarella/scripts/: autorun_welcome.sh  driver_start.sh  record_lpr.sh  send_lpr.sh  test_lpr.sh  test_posenet.sh
easy_arm/ambarella/utility/: utils.cpp  utils.h
easy_arm/data/lpr/: cv25_vin0_1080p_vin1_240x180_tof_linear.lua
